--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     ],
     "require": {
         "magento/framework": "*",
-        "studioraz/magento2-base": "^1.3",
-        "studioraz/magento2-codemirror": "^1.1.0"
+        "studioraz/magento2-base": "^1.3"
     },
     "autoload": {
         "files": [
